.opsera-clarity-1/k8s/overlays/qa/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: opsera-clarity-1-qa
  labels:
    app: clarity-1
    environment: qa
    tenant: opsera
    managed-by: argocd
